feat(cli): formatting